@@ -66,8 +66,9 @@ if (Config::get('use_rss')) { ?>
 		</h1>
 		<div id="headerbox">
 			<?php show_box_top('','box box_headerbox'); ?>
-			<span id="loginInfo"><?php echo _('You are currently logged in as') . " " . $GLOBALS['user']->fullname; ?></span>
 			<?php require_once Config::get('prefix') . '/templates/show_search_bar.inc.php'; ?>
+			<?php require_once Config::get('prefix') . '/templates/show_playtype_switch.inc.php'; ?>
+			<span id="loginInfo"><?php echo $GLOBALS['user']->fullname; ?> [<a href="<?php echo Config::get('web_path'); ?>/logout.php"><?php echo _('Log out'); ?></a>]</span>
 			<?php show_box_bottom(); ?>
 		</div> <!-- End headerbox -->
 	</div><!-- End header -->
