@@ -5,9 +5,8 @@
  All rights reserved.
 
  This program is free software; you can redistribute it and/or
- modify it under the terms of the GNU General Public License
- as published by the Free Software Foundation; version 2
- of the License.
+ modify it under the terms of the GNU General Public License v2
+ as published by the Free Software Foundation
 
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
@@ -20,24 +19,9 @@
 
 */
 
-require_once 'lib/init.php';
-
-show_header(); 
-
-switch ($_REQUEST['action']) { 
-	case 'get_advanced': 
-		$object_ids = Random::advanced($_POST); 
-
-		// We need to add them to the active playlist
-		foreach ($object_ids as $object_id) { 
-			$GLOBALS['user']->playlist->add_object($object_id,'song'); 
-		} 
-
-	case 'advanced':
-	default: 
-		require_once Config::get('prefix') . '/templates/show_random.inc.php';	
-	break;
-} // end switch 
-
-show_footer(); 
+show_box_top(_('Current Playlist')); 
 ?>
+<div id="democratic_playlist">
+<?php require_once Config::get('prefix') . '/templates/show_democratic_playlist.inc.php'; ?>
+</div>
+<?php show_box_bottom(); ?>
