@@ -87,7 +87,7 @@ textarea { background-color: #111; color: #e9ad51; }
 /*             IE6 behaviors                    */
 /* - csshover2: :hover support on any element   */
 /************************************************/
-body { behavior:url("csshover2.htc"); }
+body { behavior:url("templates/csshover2.htc"); }
 
 /************************************************/
 /*                XSPF Player                   */
@@ -107,6 +107,11 @@ body { behavior:url("csshover2.htc"); }
 #headerlogo 	  { text-align: center; background: url(../images/ampache_back.gif) 0 0 repeat-x;}
 #headerlogo a 	{ }
 .box_topbarright    {display:table;}
+
+#play_type_switch {
+        float:left;
+        margin-top:2px;
+}
 
 /************************************************/
 /*                Footer                        */
