@@ -4,6 +4,7 @@
 
 --------------------------------------------------------------------------
   v.3.4-Alpha3 
+	- Added Play Select drop down back in
 	- Fixed ordering of catalogs
 	- Fixed multi-genre Random Play
 	- New Version of Flash player fixes playlist repeat bug (Thx hugoh)
